2006-06-06    <tino@firebird.03.softkill.net>

	* dbm.c (c_delete): added delete of key only if data matches
	(db_open, main): timeout added
	(c_alter): added
	(batcher_new, c_nbatch, c_nbatch0): added
	(main): usage corrected, batch does not ignore

2006-06-04    <tino@firebird.03.softkill.net>

	* Makefile.tino (ADD_LDFLAGS): common problem resolved: I always
	add libraries to LDFLAGS instead of LDLIBS which sometimes gives
	link problems on some platforms.

	* dbm.c (c_filter): fixed the filter code.  It now shall really
	work in all circumstances as expected.  From 0.4.1 to 0.4.2 I only
	fixed the kmp=1xx case.  Now it works for kmp=0xx as expected, too
	(this is if data key does not exist don't filter and if key exists
	it must match as given).  If data is not present (4th arg not
	present in contrast to empty) only the 'k' in 'kmpt' counts and mp
	is ignored (as there you don't want to match against data).

2006-03-28    <tino@firebird.03.softkill.net>

	* dbm.c (dumpline): dump did not work correctly on args with zero
	length.

2004-12-13    <tino@firebird.03.softkill.net>

	* dbm.c (hunt): some changes migth correct errors (never checked).
	(c_filter): added

2004-09-05    <tino@firebird.03.softkill.net>

	VERSION 0.2.0

	* dbm.c (hunt): find and search added

2004-08-18  U-KOSH\Administrator  <Administrator@KOSH>

	* Makefile.tino: Libraries must be given in LDLIBS (correct) not
	in LDFLAGS (I am just too lazy) under Cygwin, sigh

2004-07-23    <tino@firebird.03.softkill.net>

	VERSION 0.1.1

	* Makefile.tino: changes for internal settings update

	* dbm.c: GPL preamble added

	* dbm.c (c_create, db_open): added stat calls, GDBM_WRITER creates
	the database instead of GDBM_WRCREAT.
	(c_list): number detection changed, 0 now is 'all'
	(c_dump, dump, dumpline): added for diagnostic dump

2004-07-22    <tino@firebird.03.softkill.net>

	* dbm.c (batch_store, batcher, c_batch, c_batch0): added
	(main): find from help removed
